@@ -1,17 +1,14 @@
-/* $Id: igd_desc_parse.c,v 1.9 2009/12/03 13:50:06 nanard Exp $ */
+/* $Id: igd_desc_parse.c,v 1.10 2010/04/05 20:36:59 nanard Exp $ */
 /* Project : miniupnp
  * http://miniupnp.free.fr/
  * Author : Thomas Bernard
- * Copyright (c) 2005-2008 Thomas Bernard
+ * Copyright (c) 2005-2010 Thomas Bernard
  * This software is subject to the conditions detailed in the
- * LICENCE file provided in this distribution.
- * */
+ * LICENCE file provided in this distribution. */
+
 #include "igd_desc_parse.h"
 #include <stdio.h>
 #include <string.h>
-
-/* TODO : rewrite this code so it correctly handle descriptions with
- * both WANIPConnection and/or WANPPPConnection */
 
 /* Start element handler :
  * update nesting level counter and copy element name */
@@ -22,10 +19,10 @@ void IGDstartelt(void * d, const char * name, int l)
 	datas->cureltname[l] = '\0';
 	datas->level++;
 	if( (l==7) && !memcmp(name, "service", l) ) {
-		datas->controlurl_tmp[0] = '\0';
-		datas->eventsuburl_tmp[0] = '\0';
-		datas->scpdurl_tmp[0] = '\0';
-		datas->servicetype_tmp[0] = '\0';
+		datas->tmp.controlurl[0] = '\0';
+		datas->tmp.eventsuburl[0] = '\0';
+		datas->tmp.scpdurl[0] = '\0';
+		datas->tmp.servicetype[0] = '\0';
 	}
 }
 
@@ -46,20 +43,18 @@ void IGDendelt(void * d, const char * name, int l)
 				"urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1"))
 			datas->state ++;
 		*/
-		if(0==strcmp(datas->servicetype_tmp,
+		if(0==strcmp(datas->tmp.servicetype,
 				"urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1")) {
-			memcpy(datas->controlurl_CIF, datas->controlurl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->eventsuburl_CIF, datas->eventsuburl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->scpdurl_CIF, datas->scpdurl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->servicetype_CIF, datas->servicetype_tmp, MINIUPNPC_URL_MAXSIZE);
-		} else if(0==strcmp(datas->servicetype_tmp,
+			memcpy(&datas->CIF, &datas->tmp, sizeof(struct IGDdatas_service));
+		} else if(0==strcmp(datas->tmp.servicetype,
 				"urn:schemas-upnp-org:service:WANIPConnection:1")
-				 || 0==strcmp(datas->servicetype_tmp,
+				 || 0==strcmp(datas->tmp.servicetype,
 				"urn:schemas-upnp-org:service:WANPPPConnection:1") ) {
-			memcpy(datas->controlurl, datas->controlurl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->eventsuburl, datas->eventsuburl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->scpdurl, datas->scpdurl_tmp, MINIUPNPC_URL_MAXSIZE);
-			memcpy(datas->servicetype, datas->servicetype_tmp, MINIUPNPC_URL_MAXSIZE);
+			if(datas->first.servicetype[0] == '\0') {
+				memcpy(&datas->first, &datas->tmp, sizeof(struct IGDdatas_service));
+			} else {
+				memcpy(&datas->second, &datas->tmp, sizeof(struct IGDdatas_service));
+			}
 		}
 	}
 }
@@ -75,13 +70,13 @@ void IGDdata(void * d, const char * data, int l)
 	if( !strcmp(datas->cureltname, "URLBase") )
 		dstmember = datas->urlbase;
 	else if( !strcmp(datas->cureltname, "serviceType") )
-		dstmember = datas->servicetype_tmp;
+		dstmember = datas->tmp.servicetype;
 	else if( !strcmp(datas->cureltname, "controlURL") )
-		dstmember = datas->controlurl_tmp;
+		dstmember = datas->tmp.controlurl;
 	else if( !strcmp(datas->cureltname, "eventSubURL") )
-		dstmember = datas->eventsuburl_tmp;
+		dstmember = datas->tmp.eventsuburl;
 	else if( !strcmp(datas->cureltname, "SCPDURL") )
-		dstmember = datas->scpdurl_tmp;
+		dstmember = datas->tmp.scpdurl;
 /*	else if( !strcmp(datas->cureltname, "deviceType") )
 		dstmember = datas->devicetype_tmp;*/
 	if(dstmember)
@@ -97,17 +92,23 @@ void printIGD(struct IGDdatas * d)
 {
 	printf("urlbase = '%s'\n", d->urlbase);
 	printf("WAN Device (Common interface config) :\n");
-	/*printf(" deviceType = '%s'\n", d->devicetype_CIF);*/
-	printf(" serviceType = '%s'\n", d->servicetype_CIF);
-	printf(" controlURL = '%s'\n", d->controlurl_CIF);
-	printf(" eventSubURL = '%s'\n", d->eventsuburl_CIF);
-	printf(" SCPDURL = '%s'\n", d->scpdurl_CIF);
+	/*printf(" deviceType = '%s'\n", d->CIF.devicetype);*/
+	printf(" serviceType = '%s'\n", d->CIF.servicetype);
+	printf(" controlURL = '%s'\n", d->CIF.controlurl);
+	printf(" eventSubURL = '%s'\n", d->CIF.eventsuburl);
+	printf(" SCPDURL = '%s'\n", d->CIF.scpdurl);
 	printf("WAN Connection Device (IP or PPP Connection):\n");
-	/*printf(" deviceType = '%s'\n", d->devicetype);*/
-	printf(" servicetype = '%s'\n", d->servicetype);
-	printf(" controlURL = '%s'\n", d->controlurl);
-	printf(" eventSubURL = '%s'\n", d->eventsuburl);
-	printf(" SCPDURL = '%s'\n", d->scpdurl);
+	/*printf(" deviceType = '%s'\n", d->first.devicetype);*/
+	printf(" servicetype = '%s'\n", d->first.servicetype);
+	printf(" controlURL = '%s'\n", d->first.controlurl);
+	printf(" eventSubURL = '%s'\n", d->first.eventsuburl);
+	printf(" SCPDURL = '%s'\n", d->first.scpdurl);
+	printf("secondary WAN Connection Device (IP or PPP Connection):\n");
+	/*printf(" deviceType = '%s'\n", d->second.devicetype);*/
+	printf(" servicetype = '%s'\n", d->second.servicetype);
+	printf(" controlURL = '%s'\n", d->second.controlurl);
+	printf(" eventSubURL = '%s'\n", d->second.eventsuburl);
+	printf(" SCPDURL = '%s'\n", d->second.scpdurl);
 }
 
 
